--- a/index.html
+++ b/index.html
@@ -1,210 +1,230 @@
-<!DOCTYPE HTML>
-<html>
-<header>
-    <meta title="Danniel Rolfe">
-    <link href="./index.css">
-    <script src="./index.js"></script>
-    <script src="./fa-light.js"></script>
-</header>
+<!doctype html>
+<html lang="en">
+<head>
+    <title>Danniel S. Rolfe</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css" >
+    <link href="https://fonts.googleapis.com/css?family=Exo+2:600|Slabo+27px" rel="stylesheet">
+    <script src="js/index.js" type="text/javascript"></script>
+    <script defer src="js/fa-light.min.js" type="text/javascript"></script>
+    <script defer src="js/fa-brands.min.js" type="text/javascript"></script>
+    <script defer src="js/fontawesome.min.js" type="text/javascript"></script>
+</head>
 <body>
-<nav>
-    <h1><i class="fal fa-code"></i>Danniel S. Rolfe</h1>
-    <div class="main-navigation">
-        <div class="main-navigation-controls">
-            <span>Menu</span>
-            <i class="fal fa-ellipsis-h"></i>
-        </div>
-        <a href="#about">About</a>
-        <a href="work">Work</a>
-        <a href="resume">Resume</a>
-        <a>Contact</a>
-    </div>
+<div class="container">
+    <nav class="main-navigation">
+        <span class="main-navigation-logo">
+            <i class="fal fa-code fa-2x"></i>
+            <h1>Danniel S. Rolfe</h1>
+        </span>
 
-</nav>
-<main>
-    <section class="about" id="about">
-        <h2>Hi. I'm Danniel S. Rolfe</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-            viverra ante.
-        </p>
-        <p>
-           Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat neque.
-           Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-           Nunc eget sollicitudin ex. Vestibulum eros magna, mattis sed faucibus id, maximus ac tellus.
-        </p>
-        <p>
-           Mauris placerat libero at quam feugiat porttitor. In ante massa, varius ut orci non, maximus consequat lorem.
-           Integer ultrices dui eu lorem accumsan, non tincidunt arcu pretium.
-        </p>
-    </section>
-
-    <section class="work" id="work">
-        <article class="work-item">
-            <h3>The Standard</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-               viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
-               neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-            </p>
-        </article>
-
-        <article class="work-item">
-            <h3>Sitka Center for Art and Ecology</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-                viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
-                neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-            </p>
-        </article>
-
-        <article class="work-item">
-            <h3>17Hats</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-                viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
-                neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-            </p>
-        </article>
-
-        <article class="work-item">
-            <h3>Manifest</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-                viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
-                neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-            </p>
-        </article>
-
-        <article class="work-item">
-            <h3>Oregon Catholic Press</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-                viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
-                neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-            </p>
-        </article>
-
-        <article class="work-item">
-            <h3>Oregon Catholic Press</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-                viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
-                neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-            </p>
-        </article>
-    </section>
-
-    <section class="resume" id="resume">
-        <div class="resume-skills">
-            <div class="resume-skills-frameworks">
-                <h4>Frameworks</h4>
-                <span>Angular 5</span>
-                <span>Angular.js</span>
-                <span>React</span>
-                <span>Redux</span>
-                <span>Node.js</span>
-                <span>Bootstrap</span>
-                <span>Karma</span>
-                <span>Jasmin</span>
-                <span>MongoDB</span>
-                <span>MySql</span>
+        <div class="main-navigation-dropdown">
+            <a href="" class="main-navigation-controls">
+                Menu
+                <i class="fal fa-ellipsis-h fa-2x"></i>
+            </a>
+            <div class="main-navigation-items">
+                <a href="#about">About</a>
+                <a href="#work">Work</a>
+                <a href="#resume">Resume</a>
+                <a href="#contact">Contact</a>
             </div>
-
-            <div class="resume-skills-languages">
-                <h4>Languages</h4>
-                <span>Javascript</span>
-                <span>Typescript</span>
-                <span>HTML5</span>
-                <span>CSS</span>
-                <span>Sass</span>
-                <span>Java</span>
-                <span>Sql</span>
-            </div>
-
-            <div class="resume-skills-devops">
-                <h4>DevOps</h4>
-                <span>Linux</span>
-                <span>Nginx</span>
-                <span>Docker</span>
-                <span>AWS</span>
-            </div>
-
-            <div class="resume-skills-tools">
-                <h4>Tools</h4>
-                <span>IntelliJ</span>
-                <span>Vim</span>
-                <span>Jira</span>
-                <span>Axure</span>
-                <span>Webpack</span>
-                <span>Gulp</span>
+            <div class="main-navigation-social-media">
+                <a href=""><i class="fab fa-github-square"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fab fa-facebook"></i></a>
             </div>
         </div>
 
-        <div class="resume-experience">
-            <article class="resume-experience-item">
-                <h4>Full Stack Developer</h4>
-                <p>The Standard</p>
-                <p>August 2017 - current</p>
-                <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
-                   open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
-                   included consuming REST APIs, implementing new features and tests, and collaborting and educating
-                   stakeholders.
+    </nav>
+    <main>
+        <section class="about" id="about">
+            <h2>About</h2>
+            <h2>Hi. I'm Danniel S. Rolfe</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
+                viverra ante.
+            </p>
+            <p>
+                Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat neque.
+                Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
+                Nunc eget sollicitudin ex. Vestibulum eros magna, mattis sed faucibus id, maximus ac tellus.
+            </p>
+            <p>
+                Mauris placerat libero at quam feugiat porttitor. In ante massa, varius ut orci non, maximus consequat lorem.
+                Integer ultrices dui eu lorem accumsan, non tincidunt arcu pretium.
+            </p>
+        </section>
+
+        <section class="work" id="work">
+            <h2>Work</h2>
+            <article class="work-item">
+                <h3>The Standard</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
+                    viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
+                    neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                 </p>
             </article>
 
-            <article class="resume-experience-item">
-                <h4>Frontend Developer</h4>
-                <p>17Hats</p>
-                <p>March 2017 - June 2017</p>
-                <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
-                    open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
-                    included consuming REST APIs, implementing new features and tests, and collaborting and educating
-                    stakeholders.
+            <article class="work-item">
+                <h3>Sitka Center for Art and Ecology</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
+                    viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
+                    neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                 </p>
             </article>
 
-            <article class="resume-experience-item">
-                <h4>Full Stack Developer</h4>
-                <p>Manifest</p>
-                <p>Sep 2016 - Feb 2017</p>
-                <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
-                    open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
-                    included consuming REST APIs, implementing new features and tests, and collaborting and educating
-                    stakeholders.
+            <article class="work-item">
+                <h3>17Hats</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
+                    viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
+                    neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                 </p>
             </article>
 
-            <article class="resume-experience-item">
-                <h4>UX Developer</h4>
-                <p>Oregon Catholic Press</p>
-                <p>May 2016 - August 2017</p>
-                <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
-                    open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
-                    included consuming REST APIs, implementing new features and tests, and collaborting and educating
-                    stakeholders.
+            <article class="work-item">
+                <h3>Manifest</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
+                    viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
+                    neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                 </p>
             </article>
-        </div>
 
-    </section>
+            <article class="work-item">
+                <h3>Oregon Catholic Press</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
+                    viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
+                    neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
+                </p>
+            </article>
 
-    <section class="contact" id="contact">
-       <form>
-           <label>Subject</label>
-           <input type="text">
+            <article class="work-item">
+                <h3>Oregon Catholic Press</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
+                    viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
+                    neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
+                </p>
+            </article>
+        </section>
 
-           <label>Email</label>
-           <input type="email">
+        <section class="resume" id="resume">
+            <h2>Resume</h2>
+            <div class="resume-skills">
+                <div class="resume-skills-frameworks">
+                    <h4>Frameworks</h4>
+                    <span>Angular 5</span>
+                    <span>Angular.js</span>
+                    <span>React</span>
+                    <span>Redux</span>
+                    <span>Node.js</span>
+                    <span>Bootstrap</span>
+                    <span>Karma</span>
+                    <span>Jasmin</span>
+                    <span>MongoDB</span>
+                    <span>MySql</span>
+                </div>
 
-           <label>Message</label>
-           <textarea></textarea>
+                <div class="resume-skills-languages">
+                    <h4>Languages</h4>
+                    <span>Javascript</span>
+                    <span>Typescript</span>
+                    <span>HTML5</span>
+                    <span>CSS</span>
+                    <span>Sass</span>
+                    <span>Java</span>
+                    <span>Sql</span>
+                </div>
 
-           <button>Send</button>
-       </form>
-    </section>
+                <div class="resume-skills-devops">
+                    <h4>DevOps</h4>
+                    <span>Linux</span>
+                    <span>Nginx</span>
+                    <span>Docker</span>
+                    <span>AWS</span>
+                </div>
 
-</main>
-<footer>
-    <a href=""><i class="fab fa-github-square"></i></a>
-    <a href=""><i class="fab fa-linkedin"></i></a>
-    <a href=""><i class="fab fa-facebook-sqaure"></i></a>
-    <a href=""><i class="fab fa-envelope-square"></i></a>
-    <span>&copy; Danniel S. Rolfe 2017</span>
-</footer>
+                <div class="resume-skills-tools">
+                    <h4>Tools</h4>
+                    <span>IntelliJ</span>
+                    <span>Vim</span>
+                    <span>Jira</span>
+                    <span>Axure</span>
+                    <span>Webpack</span>
+                    <span>Gulp</span>
+                </div>
+            </div>
+
+            <div class="resume-experience">
+                <article class="resume-experience-item">
+                    <h4>Full Stack Developer</h4>
+                    <p>The Standard</p>
+                    <p>August 2017 - current</p>
+                    <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
+                        open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
+                        included consuming REST APIs, implementing new features and tests, and collaborting and educating
+                        stakeholders.
+                    </p>
+                </article>
+
+                <article class="resume-experience-item">
+                    <h4>Frontend Developer</h4>
+                    <p>17Hats</p>
+                    <p>March 2017 - June 2017</p>
+                    <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
+                        open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
+                        included consuming REST APIs, implementing new features and tests, and collaborting and educating
+                        stakeholders.
+                    </p>
+                </article>
+
+                <article class="resume-experience-item">
+                    <h4>Full Stack Developer</h4>
+                    <p>Manifest</p>
+                    <p>Sep 2016 - Feb 2017</p>
+                    <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
+                        open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
+                        included consuming REST APIs, implementing new features and tests, and collaborting and educating
+                        stakeholders.
+                    </p>
+                </article>
+
+                <article class="resume-experience-item">
+                    <h4>UX Developer</h4>
+                    <p>Oregon Catholic Press</p>
+                    <p>May 2016 - August 2017</p>
+                    <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
+                        open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
+                        included consuming REST APIs, implementing new features and tests, and collaborting and educating
+                        stakeholders.
+                    </p>
+                </article>
+            </div>
+
+        </section>
+
+        <section class="contact" id="contact">
+            <h2>Contact</h2>
+            <form>
+                <label>Subject</label>
+                <input type="text">
+
+                <label>Email</label>
+                <input type="email">
+
+                <label>Message</label>
+                <textarea></textarea>
+
+                <button>Send</button>
+            </form>
+        </section>
+
+    </main>
+    <footer>
+        <a href=""><i class="fal fa-github-square"></i></a>
+        <a href=""><i class="fal fa-linkedin"></i></a>
+        <a href=""><i class="fal fa-facebook-sqaure"></i></a>
+        <a href=""><i class="fal fa-envelope-square"></i></a>
+        <span>&copy; Danniel S. Rolfe 2017</span>
+    </footer>
+</div>
 
 </body>
 </html>
