--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Danniel S. Rolfe</title>
     <link rel="stylesheet" href="css/style.css" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Exo+2:600|Slabo+27px" rel="stylesheet">
-    <script src="js/index.js" type="text/javascript"></script>
     <script defer src="js/fa-light.min.js" type="text/javascript"></script>
     <script defer src="js/fa-brands.min.js" type="text/javascript"></script>
     <script>
@@ -21,20 +20,22 @@
         </span>
 
         <div class="main-navigation-dropdown">
-            <a href="" class="main-navigation-controls">
+            <button class="main-navigation-button">
                 Menu
                 <i class="fal fa-ellipsis-h fa-2x"></i>
-            </a>
-            <div class="main-navigation-items">
-                <a href="#about">About</a>
-                <a href="#work">Work</a>
-                <a href="#resume">Resume</a>
-                <a href="#contact">Contact</a>
-            </div>
-            <div class="main-navigation-social-media">
-                <a href="https://github.com/rolfed"><i class="fab fa-github-square fa-2x" target="_blank"></i></a>
-                <a href="https://www.linkedin.com/in/dannielrolfe/" target="_blank" ><i class="fab fa-linkedin fa-2x"></i></a>
-                <a href=""><i class="fab fa-facebook fa-2x" target="_blank"></i></a>
+            </button>
+            <div class="hidden main-navigation-links">
+                <div class="main-navigation-items">
+                    <a href="#about">About</a>
+                    <a href="#work">Work</a>
+                    <a href="#resume">Resume</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <div class="main-navigation-social-media">
+                    <a href="https://github.com/rolfed"><i class="fab fa-github-square fa-2x" target="_blank"></i></a>
+                    <a href="https://www.linkedin.com/in/dannielrolfe/" target="_blank" ><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a href=""><i class="fab fa-facebook fa-2x" target="_blank"></i></a>
+                </div>
             </div>
         </div>
 
@@ -223,12 +224,12 @@
         <div class="main-column-25">
             <section class="contact" id="contact">
                 <h2>Contact</h2>
-                <div class="about-social-media">
+                <div class="contact-social-media">
                     <a href="https://github.com/rolfed"><i class="fab fa-github-square fa-2x" target="_blank"></i></a>
                     <a href="https://www.linkedin.com/in/dannielrolfe/" target="_blank" ><i class="fab fa-linkedin fa-2x"></i></a>
                     <a href=""><i class="fab fa-facebook fa-2x" target="_blank"></i></a>
                 </div>
-                <form>
+                <form class="contact-form">
                     <label>Subject</label>
                     <input type="text">
 
@@ -252,5 +253,6 @@
     </footer>
 </div>
 
+<script src="js/index.js" type="text/javascript"></script>
 </body>
 </html>
