WIP: adding work pictures

--- a/index.html
+++ b/index.html
@@ -45,17 +45,22 @@
             <section class="about" id="about">
                 <h2>About</h2>
                 <p>Hi. I'm Danniel S. Rolfe</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-                    viverra ante.
+                <p>
+                    I'm a software developer based in Hillsboro, Oregon. The focus of my work is building web applications
+                    with open-source technologies. I pried myself in developing code that is maintainable, organized and tested.
                 </p>
                 <p>
-                    Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat neque.
-                    Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-                    Nunc eget sollicitudin ex. Vestibulum eros magna, mattis sed faucibus id, maximus ac tellus.
+                   Currently, I'm contracting at The Standard. I'm part of the Core Engineering team who's focus is to move
+                    the compony off outdated legacy web technologies onto an open-source stack.
                 </p>
                 <p>
-                    Mauris placerat libero at quam feugiat porttitor. In ante massa, varius ut orci non, maximus consequat lorem.
-                    Integer ultrices dui eu lorem accumsan, non tincidunt arcu pretium.
+                    My background includes over five years of software development experience. Some of the notable companies I have worked
+                    on projects includes Hewlett-Packard, Sitka Center for Art and Ecology, 17Hats, Manifest, Oregon Catholic
+                    Press, The Standard and more.
+                </p>
+                <p>
+                    Take some time to look at my work, credentials and if you have a project that I can contribute to,
+                    let's get in touch.
                 </p>
             </section>
 
@@ -63,7 +68,7 @@
                 <h2>Work</h2>
                 <div class="work-items">
                     <article class="work-item">
-                        <img class="work-img" src="http://via.placeholder.com/350x350">
+                        <img class="work-img" src="/img/work-thestandard.jpg">
                         <h3>The Standard</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
