WIP: added images. Added content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="hidden main-navigation-links">
                 <div class="main-navigation-items">
                     <a href="#about">About</a>
-                    <a href="#work">Work</a>
+                    <a href="#work">Projects</a>
                     <a href="#resume">Resume</a>
                     <a href="#contact">Contact</a>
                 </div>
@@ -50,7 +50,7 @@
                     with open-source technologies. I pried myself in developing code that is maintainable, organized and tested.
                 </p>
                 <p>
-                   Currently, I'm contracting at The Standard. I'm part of the Core Engineering team who's focus is to move
+                    Currently, I'm contracting at The Standard. I'm part of the Core Engineering team who's focus is to move
                     the compony off outdated legacy web technologies onto an open-source stack.
                 </p>
                 <p>
@@ -65,7 +65,11 @@
             </section>
 
             <section class="work" id="work">
-                <h2>Work</h2>
+                <h2>Projects</h2>
+                <p>For the past five years, I have worked on a variety of projects built with Angular.js, Angular 5, React, Node.js, Express.js, and Larevel.
+                    My responsibilities have ranged from UX/UI design, full stack development and managing developers. Below you will find some notable projects that I
+                    contributed too.
+                </p>
                 <div class="work-items">
                     <article class="work-item">
                         <img class="work-img" src="/img/work-thestandard.jpg">
@@ -78,7 +82,7 @@
                     </article>
 
                     <article class="work-item">
-                        <img class="work-img" src="http://via.placeholder.com/350x350">
+                        <img class="work-img" src="/img/work-sitka.jpg">
                         <h3>Sitka Center for Art and Ecology</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
@@ -88,7 +92,7 @@
                     </article>
 
                     <article class="work-item">
-                        <img class="work-img" src="http://via.placeholder.com/350x350">
+                        <img class="work-img" src="/img/work-17hats.jpg">
                         <h3>17Hats</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
@@ -98,8 +102,8 @@
                     </article>
 
                     <article class="work-item">
-                        <img class="work-img" src="http://via.placeholder.com/350x350">
-                        <h3>Manifest</h3>
+                        <img class="work-img" src="/img/work-manifest.jpg">
+                        <h3>Manifest - Select Sales</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
                             neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
@@ -108,17 +112,7 @@
                     </article>
 
                     <article class="work-item">
-                        <img class="work-img" src="http://via.placeholder.com/350x350">
-                        <h3>Oregon Catholic Press</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
-                            viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
-                            neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
-                        </p>
-                        <a href="">Life Project</a>
-                    </article>
-
-                    <article class="work-item">
-                        <img class="work-img" src="http://via.placeholder.com/350x350">
+                        <img class="work-img" src="/img/work-ocp.jpg">
                         <h3>Oregon Catholic Press</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
