--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Exo+2:600|Slabo+27px" rel="stylesheet">
     <script defer src="js/fa-light.min.js" type="text/javascript"></script>
+    <script defer src="js/solid.min.js" type="text/javascript"></script>
     <script defer src="js/fa-brands.min.js" type="text/javascript"></script>
     <script>
         FontAwesomeConfig = { searchPseudoElements: true };
@@ -35,6 +36,7 @@
                     <a href="https://github.com/rolfed"><i class="fab fa-github-square fa-2x" target="_blank"></i></a>
                     <a href="https://www.linkedin.com/in/dannielrolfe/" target="_blank" ><i class="fab fa-linkedin fa-2x"></i></a>
                     <a href=""><i class="fab fa-facebook fa-2x" target="_blank"></i></a>
+                    <a href="mailto:talkto@dannielrolfe.com?subject=Hi Danniel, I'm contacting you from your website"><i class="fal fa-envelope fa-2x"></i></a>
                 </div>
             </div>
         </div>
@@ -66,19 +68,20 @@
 
             <section class="work" id="work">
                 <h2>Projects</h2>
-                <p>For the past five years, I have worked on a variety of projects built with Angular.js, Angular 5, React, Node.js, Express.js, and Larevel.
-                    My responsibilities have ranged from UX/UI design, full stack development and managing developers. Below you will find some notable projects that I
+                <p>For the past five years, I have worked on a variety of projects built with Angular.js, Angular 5, React, Node.js, Express.js, MySql, and NoSql.
+                    My responsibilities have ranged from UX/UI design, full stack development to managing developers. Below you will find some of the notable projects that I
                     contributed too.
                 </p>
                 <div class="work-items">
                     <article class="work-item">
                         <img class="work-img" src="/img/work-thestandard.jpg">
                         <h3>The Standard</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis enim dignissim, commodo ante eget,
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
                             neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                         </p>
-                        <a href="">Life Project</a>
+                        <a href="https://login.standard.com/" target="_blank"><i class="fal fa-external-link"></i>Live Project</a>
                     </article>
 
                     <article class="work-item">
@@ -88,7 +91,6 @@
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
                             neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                         </p>
-                        <a href="">Life Project</a>
                     </article>
 
                     <article class="work-item">
@@ -98,7 +100,7 @@
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
                             neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                         </p>
-                        <a href="">Life Project</a>
+                        <a href="https://www.17hats.com/" target="_blank"><i class="fal fa-external-link"></i>Live Project</a>
                     </article>
 
                     <article class="work-item">
@@ -108,7 +110,6 @@
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
                             neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                         </p>
-                        <a href="">Life Project</a>
                     </article>
 
                     <article class="work-item">
@@ -118,13 +119,16 @@
                             viverra ante. Pellentesque eleifend massa risus, vel commodo orci efficitur in. Aliquam dapibus feugiat
                             neque. Cras enim dolor, congue quis ligula in, pellentesque convallis erat. Nullam vitae turpis diam.
                         </p>
-                        <a href="">Life Project</a>
+                        <a href="https://ocp.org/en-us" target="_blank"><i class="fal fa-external-link"></i>Live Project</a>
                     </article>
                 </div>
             </section>
 
             <section class="resume" id="resume">
                 <h2>Resume</h2>
+                <p>
+                   <a href="/img/dannielrolfe-creative-developer-full-resume.pdf" target="_blank"><i class="fal fa-download"></i>Download PDF</a>
+                </p>
                 <div class="resume-columns">
                     <div class="resume-skills">
                         <div class="resume-skills-items">
@@ -173,47 +177,74 @@
 
                     <div class="resume-experience">
                         <article class="resume-experience-item">
-                            <h4>Full Stack Developer</h4>
-                            <p>The Standard</p>
-                            <p>August 2017 - current</p>
+                            <div class="resume-experience-title">
+                                <h4>Full Stack Developer</h4>
+                                <p>The Standard</p>
+                                <p>August 2017 - current</p>
+                            </div>
                             <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
                                 open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
                                 included consuming REST APIs, implementing new features and tests, and collaborting and educating
                                 stakeholders.
                             </p>
+                            <h4>Accomplishments</h4>
+                            <ul>
+                                <li>This and that and this and that</li>
+                                <li>This and that and this and that</li>
+                            </ul>
                         </article>
 
                         <article class="resume-experience-item">
-                            <h4>Frontend Developer</h4>
-                            <p>17Hats</p>
-                            <p>March 2017 - June 2017</p>
+                            <div class="resume-experience-title">
+                                <h4>Frontend Developer</h4>
+                                <p>17Hats</p>
+                                <p>March 2017 - June 2017</p>
+                            </div>
                             <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
                                 open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
                                 included consuming REST APIs, implementing new features and tests, and collaborting and educating
                                 stakeholders.
                             </p>
+                            <ul>
+                                <li>This and that and this and that</li>
+                                <li>This and that and this and that</li>
+                            </ul>
                         </article>
 
                         <article class="resume-experience-item">
-                            <h4>Full Stack Developer</h4>
-                            <p>Manifest</p>
-                            <p>Sep 2016 - Feb 2017</p>
+                            <div class="resume-experience-title">
+                                <h4>Full Stack Developer</h4>
+                                <p>Manifest</p>
+                                <p>Sep 2016 - Feb 2017</p>
+                            </div>
                             <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
                                 open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
                                 included consuming REST APIs, implementing new features and tests, and collaborting and educating
                                 stakeholders.
                             </p>
+                            <h4>Accomplishments</h4>
+                            <ul>
+                                <li>This and that and this and that</li>
+                                <li>This and that and this and that</li>
+                            </ul>
                         </article>
 
                         <article class="resume-experience-item">
-                            <h4>UX Developer</h4>
-                            <p>Oregon Catholic Press</p>
-                            <p>May 2016 - August 2017</p>
+                            <div class="resume-experience-title">
+                                <h4>UX Developer</h4>
+                                <p>Oregon Catholic Press</p>
+                                <p>May 2016 - August 2017</p>
+                            </div>
                             <p>At The Standard, I was responsible for moving the company off of outdated legacy web technology onto
                                 open-source stack, working on the frontend, build tools, and backend. The project that I contributed to
                                 included consuming REST APIs, implementing new features and tests, and collaborting and educating
                                 stakeholders.
                             </p>
+                            <h4>Accomplishments</h4>
+                            <ul>
+                                <li>This and that and this and that</li>
+                                <li>This and that and this and that</li>
+                            </ul>
                         </article>
                     </div>
 
@@ -227,6 +258,11 @@
                     <a href="https://github.com/rolfed"><i class="fab fa-github-square fa-2x" target="_blank"></i></a>
                     <a href="https://www.linkedin.com/in/dannielrolfe/" target="_blank" ><i class="fab fa-linkedin fa-2x"></i></a>
                     <a href=""><i class="fab fa-facebook fa-2x" target="_blank"></i></a>
+                    <a href="mailto:talkto@dannielrolfe.com?subject=Hi Danniel, I'm contacting you from your website"><i class="fal fa-envelope fa-2x"></i></a>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
                 <form class="contact-form">
                     <label>Subject</label>
@@ -244,11 +280,11 @@
         </div>
     </main>
     <footer>
-        <a href=""><i class="fal fa-github-square"></i></a>
-        <a href=""><i class="fal fa-linkedin"></i></a>
-        <a href=""><i class="fal fa-facebook-sqaure"></i></a>
-        <a href=""><i class="fal fa-envelope-square"></i></a>
-        <span>&copy; Danniel S. Rolfe 2017</span>
+        <a href=""><i class="fab fa-github"></i></a>
+        <a href=""><i class="fab fa-linkedin"></i></a>
+        <a href=""><i class="fab fa-facebook"></i></a>
+        <a href="mailto:talkto@dannielrolfe.com?subject=Hi Danniel, I'm contacting you from your website"><i class="fal fa-envelope"></i></a>
+        <span>&copy; Danniel S. Rolfe 2018</span>
     </footer>
 </div>
 
